# contact

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
nav/: Cargo.toml
nav/src/: contact_nav_template.rs  lib.rs
nav/templates/: contact_nav.html
scripts/: prepare-image-context.sh  prepare-local.sh
src/: allowlist.rs  api.rs  config.rs  human_check.rs  identity.rs  lib.rs  main.rs  model.rs  public_contact.rs  session_status.rs  store.rs  templates.rs  web.rs
src/api/: sync_response.rs
src/identity/: identity_error.rs  keycloak_user.rs  token_response.rs
src/model/: contact.rs  contact_form.rs  contact_inquiry_form.rs  contact_source.rs  create_contact.rs  update_contact.rs
src/public_contact/: contact_query.rs
src/store/: contact_store.rs  store_error.rs
src/templates/: contact_us_success_template.rs  contact_us_template.rs  form_template.rs  index_template.rs
templates/: contact_us.html  contact_us_success.html  form.html  index.html
