[workspace]
members = [".", "nav"]
resolver = "2"

[package]


name = "sigma-contact"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
description = "Contact directory for Sigma Tactical Group — identity users and external contacts"
publish = false

[dependencies]
askama = "0.16.0"
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", default-features = false, features = ["askama", "warp"] }
sigma-human-check = { git = "https://github.com/sigmatactical-org/human-check.git" }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal", "fs", "sync"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
warp = { version = "0.4.3", features = ["server", "test"] }

[dev-dependencies]
temp-env = "0.3.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
