[package]
name = "sigma-contact-nav"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
description = "Reusable Sigma Contact us navbar button widget"
publish = false

[dependencies]
askama = "0.16.0"

[package.metadata.askama]
dirs = ["templates"]
